--- a/authentication/templates/base.html
+++ b/authentication/templates/base.html
@@ -28,8 +28,11 @@
         </li>
 
         {% if user.is_authenticated %}
+           <li class="nav-item">
+          <a class="nav-link" href="{% url 'password_change' %}">Change password</a>
+         </li>
          <li class="nav-item">
-          <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+          <a class="nav-link" href="{% url 'Userlogout' %}">Logout</a>
          </li>
 
         {% else %}
@@ -37,7 +40,7 @@
           <a class="nav-link" href="{% url 'register' %}">Register</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'login' %}">Login</a>
+          <a class="nav-link" href="{% url 'Userlogin' %}">Login</a>
         </li>
 
         {% endif %}
