--- a/authentication/templates/registration/password_change_form.html
+++ b/authentication/templates/registration/password_change_form.html
@@ -1,12 +1,8 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
-{% block title %}
-<title>LOGIN</title>
-{% endblock %}
-
 {% block content %}
 <div class="container w-75 mx-auto p-5 mt-5 text-center border border-3 shadow bg-light">
-    <h1>LOGIN</h1>
+    <h1>password change</h1>
      <form method="post">
         {% csrf_token %}
         {{ form|crispy }}
@@ -14,12 +10,5 @@
             <input type="submit" class="btn btn-primary">
         </div>
     </form>
-    {% if messages %}
-    <ul type="none">
-        {% for i in messages %}
-        <li>{{i}}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
 </div>
 {% endblock %}
