--- a/schoolapp/templates/home.html
+++ b/schoolapp/templates/home.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+<div class="container w-75 mx-auto p-5 mt-5 text-center border border-3 shadow bg-light rounded-4">
+    <h2>WELCOME TO SCHOOL APP HOME</h2>
+    {% if user.is_authenticated %}
+        <h4>Hey {{ user.username }}</h4>
+    {% else %}
+        <h4>Hey Guest</h4>
+    {% endif %}
+</div>
+{% endblock %}
