--- a/schoolapp/templates/register.html
+++ b/schoolapp/templates/register.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+{% load crispy_forms_tags %}
+{% block title %}
+<title>REGISTER</title>
+{% endblock %}
+
+{% block content %}
+<div class="container w-75 mx-auto p-5 mt-5 text-center border border-3 shadow bg-light">
+    <h1>REGISTER</h1>
+    <form method="post">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <div class="mt-3">
+            <input type="submit" class="btn btn-primary">
+        </div>
+    </form>
+
+</div>
+{% endblock %}
