--- a/schoolapp/templates/studentjoin.html
+++ b/schoolapp/templates/studentjoin.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+{% load crispy_forms_tags %}
+
+{% block content %}
+<div class="container w-50 mx-auto p-5 mt-5 text-center border border-3 shadow bg-light rounded-4">
+    <h2 class="mb-4 text-center">Join School</h2>
+
+    <form method="POST">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <div class="mt-3">
+            <button type="submit" class="btn btn-primary">Join</button>
+        </div>
+    </form>
+</div>
+{% endblock %}
